[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
logos = "0.13.0"
regex = { version = "1.9.5", features = ["unicode"] }

[build-dependencies]
lalrpop = "0.20.0"
